updated some css. and added some initial text to prevent the jumping that was happening!

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -181,6 +181,7 @@ body {
 
 #game {
     grid-area: roundMess;
+    color: red;
 }
 
 #rock {
@@ -203,6 +204,10 @@ img {
     max-height: 80%;
 }
 
-#h1 {
+h1 {
+    font-size: 30px;
+}
+
+h2 {
     font-size: 30px;
 }
